Bugfix setFiguren(), entfernen überflüssiger Spielbrettmethoden.